--- a/randomChoicePicker/index.html
+++ b/randomChoicePicker/index.html
@@ -14,7 +14,7 @@
   <div id="app">
     <h3>Enter all of the choices divided by a comma (','). <br> Press enter when you're done</h3>
     <textarea placeholder="Enter choices here..." id="textarea" style="width: 518px; height: 265px;"></textarea>
-    <div id="tags"><span class="tag">seges</span><span class="tag">fhtd</span><span class="tag">fg</span></div>
+    <div id="tags"></div>
   </div>
 </body>
 
